# share

./: README.md
backend/: pyproject.toml
backend/app/api/: agents.py  stock.py  templates.py
backend/app/core/: locks.py  task_executor.py
backend/app/data/: market_service.py  repositories.py  stock_service.py
backend/app/db/: repositories.py  session.py
backend/app/models/: entities.py
frontend/src/: index.css
frontend/src/components/prompt/: TemplateCard.tsx
frontend/src/components/stock/: StockDetailDrawer.tsx
frontend/src/components/stock/charts/: MinuteChart.tsx
frontend/src/components/stock/tabs/: MinuteTab.tsx
frontend/src/components/task/: TaskForm.tsx  TaskList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
